# LegalRAG

./: .gitignore  README.md  deploy.py  legalrag-generator.py  pyproject.toml  quick-setup.sh  requirements.txt  setup-repo.sh
api/: __init__.py  app.py  models.py  startup.py
configs/: default.yaml
docs/: ARCHITECTURE.md  MODEL_CARD.md  SYSTEM_CARD.md
presentation/: presentation.md
reports/: report.md
scripts/: build_index.py  evaluate.py  generate_synthetic_data.py  run_server.py
src/: __init__.py  config.py  data_loader.py  document_processor.py  embedding_manager.py  llm_client.py  prompts.py  rag_pipeline.py  safety.py  utils.py
tests/: __init__.py  test_example.py  test_rag_pipeline.py  test_safety.py
